--- a/package.json
+++ b/package.json
@@ -17,14 +17,15 @@
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-native": "^0.69.5",
+    "cross-env": "^7.0.3",
     "prettier": "^2.7.1",
     "typescript": "^4.7.4"
   },
   "scripts": {
-    "start": "DISABLE_ESLINT_PLUGIN=true craco start",
-    "build": "DISABLE_ESLINT_PLUGIN=true craco build",
-    "test": "DISABLE_ESLINT_PLUGIN=true craco test --env=jsdom",
-    "eject": "DISABLE_ESLINT_PLUGIN=true craco eject"
+    "start": "cross-env DISABLE_ESLINT_PLUGIN=true craco start",
+    "build": "cross-env DISABLE_ESLINT_PLUGIN=true craco build",
+    "test": "cross-env DISABLE_ESLINT_PLUGIN=true craco test --env=jsdom",
+    "eject": "cross-env DISABLE_ESLINT_PLUGIN=true craco eject"
   },
   "browserslist": {
     "production": [
