--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "*"
   ],
   "dependencies": {
-    "@craco/craco": "^6.4.5",
+    "@craco/craco": "^7.1.0",
     "react": "17.0.*",
     "react-dom": "17.0.*",
     "react-native-web": "0.18.*",
-    "react-scripts": "^4.0.0"
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react": "^18.0.17",
     "@types/react-native": "^0.69.5",
     "cross-env": "^7.0.3",
     "prettier": "^2.7.1",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.5"
   },
   "scripts": {
     "start": "cross-env DISABLE_ESLINT_PLUGIN=true craco start",
